# noise-reduction

./: .gitignore  README.md  gui.py  main.py  noise_reducer.spec  pyproject.toml
.github/workflows/: build-windows.yml
